# dddioxus

./: .mcp.json  Cargo.toml  Dioxus.toml  build-css.sh  tailwind.input.css
.github/workflows/: release.yml
assets/: main.css  tailwind.css
assets/sprites/face/: index.json
assets/sprites/item/: index.json
assets/sprites/skill/: index.json
assets/sprites/unit/: index.json
planning/: README.md  decisions.md  phase-0-data-model.md  phase-1-lock-stack.md  phase-3-docking.md  phase-4-floating-windows.md  phase-5-cross-window-state.md  phase-6-dock-storybook.md  research-notes.md
src/: main.rs  protocol.rs  rpc.rs
src/components/: bonds_view.rs  catalog_provider.rs  chapter_view.rs  components_panel.rs  connection_provider.rs  cutscene_view.rs  fields.rs  force_view.rs  globals_view.rs  gmap_view.rs  inspector.rs  inspector_host.rs  map_view.rs  mess_view.rs  messagecontextprovider.rs  mod.rs  procs_view.rs  progress_view.rs  resizable_panel.rs  scene_tree.rs  scene_view.rs  script_view.rs  shell.rs  toast.rs  transform_inspector.rs  update_banner.rs  websocketprovider.rs
src/components/fields/: mod.rs  vec3.rs
src/components/forces/: bond_inspector.rs  inventory_inspector.rs  mod.rs  skill_inspector.rs  stat_field.rs  stat_inspector.rs  unit_inspector.rs
src/components/ui/: README.md  button.rs  card.rs  field.rs  layout.rs  mod.rs  select.rs  tabs.rs
src/dev/: fixtures.rs  mod.rs
src/dev/stories/: component_row.rs  components_list_panel.rs  descs_panel.rs  dock_workspace.rs  global_row.rs  globals_panel.rs  mod.rs  proc_tree_node.rs  procs_panel.rs  scene_panel.rs  scene_simulation.rs  scene_tree.rs  transform_panel.rs  (+2 more)
src/dock/: commands.rs  drag.rs  floating.rs  mod.rs  model.rs  path.rs  persistence.rs  selectors.rs  shared.rs  splitter.rs  view.rs
src/hooks/: client.rs  command.rs  connection.rs  mod.rs  settings.rs  websocket.rs
src/protocol/: chapter.rs  components.rs  cutscene.rs  force.rs  gamedata.rs  globals.rs  gmap.rs  god.rs  inventory.rs  map.rs  mess.rs  mod.rs  procs.rs  scene.rs  script.rs  skill.rs  transform.rs  unit.rs
