[package]
name = "dddioxus"
version = "0.1.0"
authors = ["Raytwo <raytwost@gmail.com>"]
edition = "2021"

[features]
dev = []

[dependencies]
dioxus = { version = "0.7", features = ["desktop", "router"] }

# OS clipboard access
arboard = "3"

# Sora protocol
sora-protocol = { git = "https://github.com/DivineDragonFanClub/sora-protocol" }
sora-codecs = { git = "https://github.com/DivineDragonFanClub/sora-protocol" }

# Async
tokio = { version = "1", features = ["sync", "rt", "net"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Debug
log = "0.4.19"
dioxus-logger = "0.7"

# Parsing
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
